--- a/.cargo/config
+++ b/.cargo/config
@@ -1,3 +1,3 @@
 [build]
 # the ../../../ is target/(debug|release)/build
-rustflags = ["-C", "link-arg=-T../../../shenango-chunnel/caladan/base/base.ld"]
+rustflags = ["-C", "link-arg=-T../../../caladan/base/base.ld"]
